New input properties
