# app/controllers/AttendanceController.java
@@ -1,57 +1,50 @@
 package controllers;
 
-import static akka.pattern.Patterns.ask;
-
-import java.util.concurrent.CompletionStage;
-
-import javax.inject.Inject;
-
-import com.fasterxml.jackson.databind.node.ArrayNode;
-import com.fasterxml.jackson.databind.node.ObjectNode;
-
-import actors.AttendeeActor;
-import akka.actor.ActorRef;
-import akka.actor.ActorSystem;
 import models.Attendee;
 import play.Logger;
-import play.data.FormFactory;
 import play.libs.Json;
 import play.mvc.Controller;
 import play.mvc.Result;
-import scala.compat.java8.FutureConverters;
-import scala.concurrent.Future;
+import services.DataStaxUtil;
 
 public class AttendanceController extends Controller {
 
-	@Inject FormFactory formFactory;
+	private static DataStaxUtil dataStaxUtil = new DataStaxUtil();
 	
-	ActorRef attendeeActor;
-	
-	@Inject
-	public AttendanceController(ActorSystem system) {
-		attendeeActor = system.actorOf(AttendeeActor.props);
-	}
-
-    public Result showAttendanceForm() {
+    public Result showAttendeeForm() {
     	return ok(views.html.attendanceform.render());
     }
 
-	public CompletionStage<Result> postAttendance() {
-    	Attendee attendee = Json.fromJson(request().body().asJson(), Attendee.class);
-    	Logger.info("attendee=" + attendee.toString());
-    	 	
-		Future<Object> future = ask(attendeeActor, attendee, 1000);
-		return FutureConverters.toJava(future)
-				.thenApply(response -> ok((ObjectNode) response));
+    /**
+     * Sample post body:
+     * {
+	 *	  "beaconID": "6FBBEF7C-F92C-471E-8D5C-470E9B367FDB",
+	 *	  "attendeeID": "D40373764",
+	 *	  "firstName": "Gwowen",
+	 *	  "lastName": "Fu",
+	 *	  "eventID": "1",
+	 *	  "eventName": "IT All Hands Meeting",
+	 *	  "placeName": "DeVry Education Group - Home Office",
+	 *	  "roomName": "Mobile Solutions Area",
+	 *	  "deviceID": "test",
+	 *	  "os": "Android",
+	 *	  "timestamp": "2016-10-14 14:22:52 +0000"
+	 *	}
+	 *
+     * @return
+     */
+	public Result postAttendee() {
+		Attendee attendee = Json.fromJson(request().body().asJson(), Attendee.class);
+		if (dataStaxUtil.saveAttendee(attendee)) {
+			return ok(Json.newObject().put("response", "success"));					
+		} else {
+			return Controller.badRequest(Json.newObject().put("response", "error"));								
+		}
 	}
 
-	public CompletionStage<Result> getAttendances() {
-    	Logger.info("Get attendance list");
-    	
-		Future<Object> future = ask(attendeeActor, AttendeeActor.GET_ATTENDEE_LIST, 1000);
-		return FutureConverters.toJava(future)
-				.thenApply(response -> ok((ArrayNode) response));
+	public Result getAttendees() {
+		Logger.info("Get attendance list");
+		return ok(dataStaxUtil.getAttendees());		
 	}
-
     
 }
